add spec for calendar
