# config/routes.rb
@@ -5,12 +5,6 @@ Rails.application.routes.draw do
   mount Rswag::Api::Engine => '/api-docs'
   namespace :api do
     namespace :v1 do
-      resources :appointments, only: [:index, :show, :create, :update] do
-        member do
-          post :cancel
-          post :accept
-        end
-      end
 
       # Search hospitals and doctors
       get '/search', to: 'search#search'
@@ -67,15 +61,11 @@ Rails.application.routes.draw do
       put    'patient/main-info',                            to: 'personal_info#update'
       delete 'patient/main-info',                            to: 'personal_info#destroy'
     end
-    
-    resources :calendars, only: [:index, :show, :create, :update] do
-        member do
-          get :events
-        end
-      end
 
-      resources :doctors, only: [:index, :show, :create, :update]
-      resources :patients, only: [:index, :show, :create, :update]
+    # Calendar
+    get 'calendars', to: 'calendars#index'
+    post 'calendars', to: 'calendars#create'
+    put 'calendars/:id', to: 'calendars#update'
 
     namespace :v2 do
       # Advanced options for doctors
